methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:5: error: not found: value chemin
    chemin = isFacingTrail()
    ^SlugHunting:6: error: not found: value chemin
    if (chemin)
        ^SlugHunting:10: error: not found: value chemin
      chemin = isFacingTrail()
      ^SlugHunting:11: error: not found: value chemin
       if (chemin) 
           ^